--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <path d="M22 6l-10 7L2 6" /></svg>
             Clancy102456@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
-          <a href="tool.html"><button class="contact-me">奇奇怪怪</button></a>
+          <a href="tools/"><button class="contact-me">奇奇怪怪</button></a>
         </div>
       </div>
     </div>
