--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <button data-section="#about" class="is-active">个人主页</button>
       <button data-section="#experience">时间轴</button>
       <button data-section="#contact">联系我们</button>
-      <button data-section="friend/">友链</button> 
+      <button data-section="friend/index.html#licheng">友链</button> 
     </div>
   </div>
 </div>
