--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <button data-section="#about" class="is-active">个人主页</button>
       <button data-section="#experience">时间轴</button>
       <button data-section="#contact">联系我们</button>
-      <a href="friend/index.html#licheng" target="_blank"><button data-section="">nbsp;nbsp;友链nbsp;nbsp;</button></a>
+      <a href="friend/index.html#licheng" target="_blank"><button data-section="">&nbsp;&nbsp;友链&nbsp;&nbsp;</button></a>
     </div>
   </div>
 </div>
