--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<p>跟“版权保护”不同的是，国内某技术社区用户毫无限制地“复制--粘贴”文章。同一个标题，在网上一搜，出来的几十个候选项都几乎是一模一样的；复制的时候也不管排版是否错位、图片链接是否有效，只是机械地Ctrl+C、Ctrl+V，直接导致了有效信息被埋没在大量的互联网垃圾中，想从中获取有效信息越发越困难。</p>
 		<p>当然，我在尝试着建这个平台的时候，也遇到了不少困难。首当其冲的就是资金问题，没别的，只能自掏腰包花压岁钱解决了，还是得感谢下<a href="https://www.46yun.com/aff/KYUXHHXO" target="_blank"> 46云 </a>提供的虚拟主机；第二就是技术问题，我的朋友，也就是<a href="http://cn-hb-sy-2.starryfrp.com:45337/pl.php" target="_blank"> ZZH工作室 </a>的室长，帮我解决了大部分；最大的第三个问题：管理。我开学可能要住校，这个网站要么半死不活地挂着，要么直接停机，要么委托给热心网友管理。就在我试着解决这个问题时，令我意想不到的事情发生了——云镇临时主机被恶意cc攻击致宕机了。这也就引出了第四个问题，安全问题。我真不想再多说什么了，去看看b站up主<a href="https://space.bilibili.com/12890453/" target="_blank"> @程序员鱼皮 </a>吧。</p>
 		<p>这个域名我会尽力续下去，虽然看起来只是白费功夫。但愿望是要有的，万一实现了呢？</p>
+		<p>感谢收录：<a href="https://dh.dckjys.cn/" target="_blank">东辰秒收录-网址导航</a></p>
 		</div>
       </div>
       <div class="card-social">
