--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="zh-CN" >
 <head>
 <meta charset="UTF-8">
+<meta data-n-head="ssr" vmid="description" name="description" content="CloudTown是一个面向网站开发者的云端小镇，会不时不时发布一些服务器、域名优惠活动信息，可以在这里交流技术、分享经验，互相帮助，合作共赢。">
+<meta name="KEYWords" contect="CloudTown,cloudtown,Cloudtown,云镇,云端小镇,Clancy,优惠,服务器,域名,vps,html,h5,css,php,java,python,c#,c++,c,活动,前端,后端,草根站长,个人网站,技术,交流,分享,问题,帮助,赞助,工作室,涩图,102456">
 <title>CloudTown | 云镇</title>
-
 <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
 
