--- a/index.html
+++ b/index.html
@@ -51,19 +51,23 @@
         <div class="card-timeline">
           <div class="card-item" data-year="2023">
             <div class="card-item-title">注册域名 <span>2023-01-21</span></div>
-            <div class="card-item-desc">购入域名CloudTown.TOP，钱包 -6.78软妹币</div>
+            <div class="card-item-desc">购入域名CloudTown.TOP，钱包 -6.78软妹币</br>˶⍤⃝˶꒳ᵒ꒳</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">购买服务器 <span>2023-01-22</span></div>
-            <div class="card-item-desc">租赁46云服务器，钱包 -15软妹币</div>
+            <div class="card-item-desc">租赁46云服务器，钱包 -15软妹币</br>（｀Δ´）！</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">尝试部署网站 <span>2023-01-22</span></div>
-			<div class="card-item-desc">（然而尝试了数款源码还是觉得不行），钱包 -2软妹币</div>
+			<div class="card-item-desc">（然而尝试了数款源码还是觉得不行），钱包 -2软妹币</br>(>o<)</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">重置网站主页 <span>2023-01-24</span></div>
-            <div class="card-item-desc">删库但没有跑路，顺便重置了网站主页，尝试在知乎上寻求帮助</div>
+            <div class="card-item-desc">删库但没有跑路，顺便重置了网站主页，尝试在知乎上寻求帮助</br>ฅ՞•ﻌ•՞ฅ</div>
+          </div>
+          <div class="card-item" data-year="2023">
+            <div class="card-item-title">迁移至Netlify托管 <span>2023-02-26</span></div>
+            <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦</br>ヾ(๑╹ヮ╹๑)ﾉ”</br>啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！</br>(•̀ᴗ•́)و ̑̑</div>
           </div>
         </div>
       </div>
