--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="zh-CN" >
 <head>
 <meta charset="UTF-8">
@@ -51,15 +52,15 @@
         <div class="card-timeline">
           <div class="card-item" data-year="2023">
             <div class="card-item-title">注册域名 <span>2023-01-21</span></div>
-            <div class="card-item-desc">购入域名CloudTown.TOP，钱包 -6.78软妹币</br>˶⍤⃝˶꒳ᵒ꒳</div>
+            <div class="card-item-desc">购入域名CloudTown.TOP，钱包 -6.78软妹币. ˶⍤⃝˶꒳ᵒ꒳</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">购买服务器 <span>2023-01-22</span></div>
-            <div class="card-item-desc">租赁46云服务器，钱包 -15软妹币</br>（｀Δ´）！</div>
+            <div class="card-item-desc">租赁46云服务器，钱包 -15软妹币. （｀Δ´）！</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">尝试部署网站 <span>2023-01-22</span></div>
-			<div class="card-item-desc">（然而尝试了数款源码还是觉得不行），钱包 -2软妹币</br>(>o<)</div>
+			<div class="card-item-desc">（然而尝试了数款源码还是觉得不行），钱包 -2软妹币. (>o<)</div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">重置网站主页 <span>2023-01-24</span></div>
@@ -67,7 +68,7 @@
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">迁移至Netlify托管 <span>2023-02-26</span></div>
-            <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦</br>ヾ(๑╹ヮ╹๑)ﾉ”</br>啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！</br>(•̀ᴗ•́)و ̑̑</div>
+            <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦.</br>ヾ(๑╹ヮ╹๑)ﾉ”</br>啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！ (•̀ᴗ•́)و ̑̑</div>
           </div>
         </div>
       </div>
