--- a/index.html
+++ b/index.html
@@ -21,16 +21,9 @@
     <div class="card-section is-active" id="about">
       <div class="card-content">
         <div class="card-subtitle">关于</div>
-        <div  class="card-desc">
-		<p>真的还没有想好建这个网站应该怎么做...</p>
-		<p>注册“云镇（CloudTown.TOP）”这个域名本意是想搭建一个面向草根站长的、非营利性的云上小镇，发布一些优惠信息或者技术教程，把广大草根站长聚合起来，一起交流技术、分享创意。</p>
-		<p>很多站长自己建的博客其实都很有创意，但由于众多因素，例如搜索引擎收率不高、网站经常被恶意攻击、站长本人没时间管理网站等等，总会让这些小众网站逐渐消失沉寂在互联网的边缘。</p>
-		<p>给草根站长一个家，一个能够和他人一起分享、欣赏自己做的网站的地方。——我的初衷。</p>
-		<p>本人是在校学生，今年暑假中考，建这个网站纯属个人爱好。很多人嘲笑我天真、幼稚、“没经历过社会的毒打”。但始终保持对外界新事物的好奇心，去不断追求和探索，不正就是现代互联网需要需要的吗？</p>
-		<p>当我们想使用一段代码时，右键鼠标，弹出的却是“您还未登录”“关注公众号xxx即可一键复制”“成为VIP用户享受xx项特权”。互联网大厂所谓的“版权保护”导致的信息垄断无时无刻阻碍着网络发展。有网友说，逛CxxN平台的感觉就像是在垃圾桶里找饭吃。很难听，但也很真实。</p>
-		<p>跟“版权保护”不同的是，国内某技术社区用户毫无限制地“复制--粘贴”文章。同一个标题，在网上一搜，出来的几十个候选项都几乎是一模一样的；复制的时候也不管排版是否错位、图片链接是否有效，只是机械地Ctrl+C、Ctrl+V，直接导致了有效信息被埋没在大量的互联网垃圾中，想从中获取有效信息越发越困难。</p>
-		<p>当然，我在尝试着建这个平台的时候，也遇到了不少困难。首当其冲的就是资金问题，没别的，只能自掏腰包花压岁钱解决了，还是得感谢下<a href="https://www.46yun.com/aff/KYUXHHXO" target="_blank"> 46云 </a>提供的虚拟主机；第二就是技术问题，我的朋友，也就是<a href="http://cn-hb-sy-2.starryfrp.com:45337/pl.php" target="_blank"> ZZH工作室 </a>的室长，帮我解决了大部分；最大的第三个问题：管理。我开学可能要住校，这个网站要么半死不活地挂着，要么直接停机，要么委托给热心网友管理。就在我试着解决这个问题时，令我意想不到的事情发生了——云镇临时主机被恶意cc攻击致宕机了。这也就引出了第四个问题，安全问题。我真不想再多说什么了，去看看b站up主<a href="https://space.bilibili.com/12890453/" target="_blank"> @程序员鱼皮 </a>吧。</p>
-		<p>这个域名我会尽力续下去，虽然看起来只是白费功夫。但愿望是要有的，万一实现了呢？</p>
+        <div  class="card-desc"><p>欢迎来到CloudTown</p>
+		<p>太阳在苹果上，湖里的汽车在叫，我觉得这只能算一种习惯性的螃蟹。爱因斯坦是一百九十六个松鼠的总和，三角形的衣服是杉树的根，天花板亲吻我的鞋，包括头发和牛奶，霜降一般地。月亮是意义不明的佛洛西斯，也许像昨天。每秒钟都是新的铁栅栏和云母，比如黄昏。</p>
+                <p>How lucky to meet you!</p><p>•蘑菇森林的尽头，新世界的起点•</p><p>希望能够在比特之海的繁星下再次与你相见！</p>
 		</div>
       </div>
       <div class="card-social">
@@ -70,6 +63,10 @@
             <div class="card-item-title">迁移至Netlify托管 <span>2023-02-26</span></div>
             <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦.</br>ヾ(๑╹ヮ╹๑)ﾉ”</br>啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！ (•̀ᴗ•́)و ̑̑</div>
           </div>
+          <div class="card-item" data-year="2023">
+            <div class="card-item-title">更新主页，加入公共API接口 <span>2023-04-08</span></div>
+            <div class="card-item-desc">中考加油鸭ο(=•ω＜=)ρ⌒☆
+          </div>
         </div>
       </div>
     </div>
@@ -92,7 +89,7 @@
               <path d="M22 6l-10 7L2 6" /></svg>
             Clancy102456@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
-          <a href="tools/"><button class="contact-me">奇奇怪怪</button></a>
+          <a href="http://api.102456.xyz/"><button class="contact-me">公共API</button></a>
         </div>
       </div>
     </div>
