--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">更新主页，加入公共API接口 <span>2023-04-08</span></div>
-            <div class="card-item-desc">中考加油鸭ο(=•ω＜=)ρ⌒☆
+            <div class="card-item-desc">中考加油鸭ο(=•ω＜=)ρ⌒☆</div>
           </div>
         </div>
       </div>
