--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="KEYWords" contect="CloudTown,cloudtown,Cloudtown,云镇,云端小镇,Clancy,优惠,服务器,域名,vps,html,h5,css,php,java,python,c#,c++,c,活动,前端,后端,草根站长,个人网站,技术,交流,分享,问题,帮助,赞助,工作室,涩图,102456">
 <title>CloudTown | 云镇</title>
 <link rel="stylesheet" href="css/style.css">
+<meta name="baidu-site-verification" content="codeva-IWBhctszxI" />
 </head>
 <body>
 
@@ -21,7 +22,7 @@
     <div class="card-section is-active" id="about">
       <div class="card-content">
         <div class="card-subtitle">关于</div>
-        <div  class="card-desc"><p>欢迎来到CloudTown</p>
+        <div  class="card-desc"><p>欢迎来到CloudTown！</p>
 		<p>太阳在苹果上，湖里的汽车在叫，我觉得这只能算一种习惯性的螃蟹。爱因斯坦是一百九十六个松鼠的总和，三角形的衣服是杉树的根，天花板亲吻我的鞋，包括头发和牛奶，霜降一般地。月亮是意义不明的佛洛西斯，也许像昨天。每秒钟都是新的铁栅栏和云母，比如黄昏。</p>
                 <p>How lucky to meet you!</p><p>•蘑菇森林的尽头，新世界的起点•</p><p>希望能够在比特之海的繁星下再次与你相见！</p>
 		</div>
