--- a/tools/index.html
+++ b/tools/index.html
@@ -102,12 +102,12 @@
             <div class="row">
                 <div class="col-sm-8 col-md-7 py-4">
                     <h4 class="text-white">About</h4>
-                    <p class="text-muted">本在线工具合集，使用 HTML、JS、CSS 制作和实现，数据的处理和计算以及文件处理均在本地浏览器中进行。</p>
+                    <p class="text-muted">本在线工具合集使用 HTML、JS、CSS、PHP 制作和实现。除标有“PHP”的外，其余在线工具的数据处理和计算以及文件处理均在本地浏览器中进行。</p>
                 </div>
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
-                        <li><a class="text-white" href="https://html-demo.uiisc.org/" target="_blank">HTML Demo</a></li>
+                        <li><a class="text-white" href="https://nic.zpage.eu" target="_blank">Z-Page - 免费二级域名</a></li>
                     </ul>
                 </div>
             </div>
