--- a/tools/index.html
+++ b/tools/index.html
@@ -22,7 +22,8 @@
             background-repeat: no-repeat;
             background-color: #fff;
             //background-image: url(./assets/img/bingBackground.png);
-            background-image: url(https://api.102456.xyz/pixiv/data/);
+            //background-image: url(https://api.102456.xyz/pixiv/data/);
+            background-image: url(https://pixiv.cloudtown.top/random.php);
             background-position: center center;
             position: fixed;
             top: 0;
