添加在线音乐解密工具(more tools)

--- a/tools/index.html
+++ b/tools/index.html
@@ -179,7 +179,15 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <h5 class="card-title">音乐解密</h5>
+                            <p class="card-text">离线音乐解密，支持QQ音乐 (.qmc0/.qmc2/.qmc3/.qmcflac/.qmcogg/.tkm/.tm0/.tm2/.tm3/.tm6)、酷狗音乐 (.kgm)、网易云音乐 (.ncm)、酷我音乐 (.kwm)、虾米音乐 (.xm)和其他格式 (mflac/.mgg)等，处理在本地进行</p>
+                            <a class="btn btn-primary" href="demusic">马上打开</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card mt-4">
                         <div class="card-body">
