--- a/tools/index.html
+++ b/tools/index.html
@@ -166,16 +166,25 @@
                         <div class="card-body">
                             <h5 class="card-title">(*PHP) 短链生成</h5>
                             <p class="card-text">CloudTown | 云镇官方短链接平台，把链接变短！</p>
-                            <a class="btn btn-primary" href="https://短链.top/" target="_blank">马上打开</a>
+                            <a class="btn btn-primary" href="https://链.top/" target="_blank">马上打开</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card mt-4">
                         <div class="card-body">
-                            <h5 class="card-title">(*PHP) CloudTown | 云镇API</h5>
-                            <p class="card-text">CloudTown | 云镇API，持续更新中……</p>
-                            <a class="btn btn-primary" href="https://api.102456.xyz/" target="_blank">马上打开</a>
+                            <h5 class="card-title">九宫格图片裁切</h5>
+                            <p class="card-text">在线图片裁切(3x3)，可以用于制作微博/朋友圈/动态九宫格文案</p>
+                            <a class="btn btn-primary" href="9cut" target="_blank">马上打开</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <h5 class="card-title">QQ强制聊天/➕好友</h5>
+                            <p class="card-text">强制聊天/➕好友，哪怕设置了隐藏，也要用热情打动每一个人</p>
+                            <a class="btn btn-primary" href="QQ/QTalking.html" target="_blank">马上打开</a>
                         </div>
                     </div>
                 </div>
