--- a/friend/index.html
+++ b/friend/index.html
@@ -49,10 +49,10 @@
 									
 									<li>
 										<h3>
-											<a href="https://短链.top/">短链.top</a>
+											<a href="https://blog.starchen.top">blog.starchen.top | 星辰博客</a>
 										</h3>
 										<p>
-											<a href="https://短链.top/">短链.top</a>
+											<a href="https://blog.starchen.top">星辰博客,一个分享资源、技术、工具和教程的博客<br>hope for star</a>
 										</p>
 									</li>
 									
