--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <path d="M22 6l-10 7L2 6" /></svg>
             Clancy102456@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
-          <a href="http://api.102456.xyz/"><button class="contact-me">公共API</button></a>
+          <a href="friend/"><button class="contact-me">友情链接</button></a>
         </div>
       </div>
     </div>
