--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">迁移至Netlify托管 <span>2023-02-26</span></div>
-            <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦.</br>ヾ(๑╹ヮ╹๑)ﾉ”</br>啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！ (•̀ᴗ•́)و ̑̑</div>
+            <div class="card-item-desc">临时托管服务器到期了，只能先用静态托管凑合凑合.</br>最近学业比较紧，打算过几天有空了捣鼓个Hexo博客，当然还是白嫖GitHub的仓库啦.</br>ヾ(๑╹ヮ╹๑)ﾉ”</br><!-- 啊啊啊啊啊还有&nbsp;<nobr id="days"></nobr>&nbsp;天就中考了，加油鸭！ (•̀ᴗ•́)و ̑̑ --></div>
           </div>
           <div class="card-item" data-year="2023">
             <div class="card-item-title">更新主页，加入公共API接口 <span>2023-04-08</span></div>
             <div class="card-item-desc">中考加油鸭ο(=•ω＜=)ρ⌒☆</div>
+          </div>
+	  <div class="card-item" data-year="2024">
+            <div class="card-item-title">修复友链展示页面，更新奇奇怪怪工具箱 <span>2024-04-04</span></div>
+            <div class="card-item-desc">时间过得好快啊…不知不觉间CloudTown.top已经运行一年多了呢</div>
           </div>
         </div>
       </div>
