--- a/friend/index.html
+++ b/friend/index.html
@@ -34,6 +34,7 @@
 						<nav>
 							<ul>
 								<li><a href="/" target="_blank">云镇 | CloudTown</a></li>
+								<li><a href="//blog.starchen.top" target="_blank">星辰博客</a></li>
 								<li><a href="#">申请友链</a></li>
 								<li><a href="mailto:admin@cloudtown.top" target="_blank">Email 联系我</a></li>
 							</ul>
